Beautifying, fixed search bar, moved to /mask and other misc optimizations * Set base to '/mask' * Added an error route. * Search results component now routes profiles with year. * Search bar hides when it shouldn't be visible. (Other css changes too). * Profile attributes are now parsed and linked.

--- a/app/shared/search-bar/search-bar.styles.css
+++ b/app/shared/search-bar/search-bar.styles.css
@@ -9,8 +9,11 @@ input { border-radius: 0; }
   top: 100%;
   width: 100%;
   background-color: rgba(255,255,255,1);
+  z-index:100;
 }
 .search-bar-results a {
   padding: 0.25em 0.5em;
   margin: 0;
+  display: block;
+  width: 100%;
 }
